--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ default: &default
 development:
   <<: *default
   database: <%= ENV['DATABASE_NAME'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>  
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -50,7 +50,7 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:  
+production:
   <<: *default
-  database: <%= ENV['DATABASE_URL'] %>
-  
+  url: <%= ENV['DATABASE_URL'] %>
+
