--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,12 +12,12 @@ test:
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 
-amazon:
-  service: S3     
-  access_key_id: <%= ENV['KEY_ID'] %>
-  secret_access_key: <%= ENV['SECRET_KEY'] %>
-  region: us-east-1
-  bucket: abba-product-images
+#amazon:
+#  service: S3
+#  access_key_id: <%= ENV['KEY_ID'] %>
+#  secret_access_key: <%= ENV['SECRET_KEY'] %>
+#  region: us-east-1
+#  bucket: abba-product-images
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
